# fatline-client

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  server.properties.example  settings.gradle.kts
.github/: FUNDING.yml
api/: build.gradle.kts
api/src/androidTest/java/online/mempool/fatline/api/: ExampleInstrumentedTest.kt
api/src/main/kotlin/online/mempool/fatline/api/: Server.kt  UserRepository.kt
api/src/test/java/online/mempool/fatline/api/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/online/mempool/fatline/client/: ExampleInstrumentedTest.kt
app/src/debug/: AndroidManifest.xml
app/src/debug/res/xml/: network_security_config.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/online/mempool/fatline/client/: Application.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_monochrome.xml  icon.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/test/java/online/mempool/fatline/client/: ExampleUnitTest.kt
data/: build.gradle.kts
data/jni_lib/: Cargo.toml  buildNatives.sh
data/jni_lib/src/: lib.rs
data/schemas/online.mempool.fatline.data.db.AppDatabase/: 1.json  2.json
data/src/main/java/: Reaction.kt
data/src/main/java/online/mempool/fatline/data/: Cast.kt  Hash.kt  IndexedSigner.kt  Profile.kt  ProfileFollow.kt  Reaction.kt  Util.kt
data/src/main/proto/: LinkIndex.proto
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+29 files in other folders)
